; ModuleID = '/home/carl/AnghaBench/micropython/py/extr_runtime.c_mp_call_method_n_kw_var.c'
source_filename = "/home/carl/AnghaBench/micropython/py/extr_runtime.c_mp_call_method_n_kw_var.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_call_method_n_kw_var(i32 %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i32*, align 8
  %7 = alloca %struct.TYPE_3__, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i64 %1, i64* %5, align 8
  store i32* %2, i32** %6, align 8
  %9 = load i32, i32* %4, align 4
  %10 = load i64, i64* %5, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @mp_call_prepare_args_n_kw_var(i32 %9, i64 %10, i32* %11, %struct.TYPE_3__* %7)
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 4
  %14 = load i32, i32* %13, align 4
  %15 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 3
  %16 = load i32, i32* %15, align 4
  %17 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @mp_call_function_n_kw(i32 %14, i32 %16, i32 %18, i32 %20)
  store i32 %21, i32* %8, align 4
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = sext i32 %25 to i64
  %27 = mul i64 %26, 4
  %28 = trunc i64 %27 to i32
  %29 = call i32 @mp_nonlocal_free(i32 %23, i32 %28)
  %30 = load i32, i32* %8, align 4
  ret i32 %30
}

declare dso_local i32 @mp_call_prepare_args_n_kw_var(i32, i64, i32*, %struct.TYPE_3__*) #1

declare dso_local i32 @mp_call_function_n_kw(i32, i32, i32, i32) #1

declare dso_local i32 @mp_nonlocal_free(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
